--- a/css/styles.css
+++ b/css/styles.css
@@ -13,36 +13,87 @@
   --primary-background-color: #f5f5f5;
   --secondary-background-color: #f5f4fa;
 }
+
 .page {
-  background-color: var(--primary-background-color);
+  margin-top: 0;
+  margin-bottom: 0;
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
   font-size: 14px;
+  font-style: normal;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+ul {
+  list-style: none;
+}
+h1,
+h2,
+h3,
+h4,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+a {
   text-decoration: none;
   font-style: normal;
 }
 
-.link-header {
-  text-decoration: none;
-  color: var(--secondary-text-color);
+/* Containers /////////////////////////////////////////////////////////////// */
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* outline: 1px solid crimson; */
+  align-items: center;
 }
-.link-footer {
-  text-decoration: none;
-  line-height: 1.71;
-  color: rgba(255, 255, 255, 0.6);
+.container-header {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* outline: 1px solid blue; */
 }
-.work.title {
-  text-decoration: none;
-  line-height: 2;
-  color: var(--primary-text-color);
+.container-team {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* outline: 1px solid crimson; */
+  align-items: center;
+  /* padding-top: 94px;
+  padding-bottom: 94px; */
+  background: #f5f4fa;
 }
+/* Header////////////////////////////////////////////////////////////////////// */
 
-.work-description {
-  text-decoration: none;
-  color: var(--secondary-text-color);
+.main-nav {
+  margin-left: 93px;
+  display: flex;
+  align-items: center;
 }
 .logo {
+  margin-left: 0;
+  margin-right: 0;
+  padding-right: 0;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
   color: var(--accent-color);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -50,44 +101,51 @@
   line-height: 1.2;
   text-decoration: none;
 }
-/* Site Navigation */
-.site-nav a {
+
+.site-nav {
+  display: flex;
+  /* margin-top: 0;
+  margin-bottom: 0; */
+
+  /* list-style: none; */
+  /* font-style: normal; */
   font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  color: var(--primary-text-color);
-}
-.site-nav a :visited {
-  color: var(--primary-text-color);
 }
 
-.list a:hover,
-.list a:focus {
-  color: var(--accent-color);
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
 }
-.feature-title {
-  line-height: 1.14;
-  text-transform: uppercase;
-}
-.feature-description {
-  color: var(--secondary-text-color);
-
-  line-height: 1.7;
-}
-.logo-studio {
+.site-nav a {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--primary-text-color);
+
+  /* text-decoration: none; */
 }
+/* ////////////////////////////////////////////////////////////////
+///////////////////////////////////////////////////////////////// /* 
+
+/* Main Index */
+
 .hero-title {
   font-weight: 900;
   font-size: 44px;
   color: var(--white-text-color);
   line-height: 1.36;
-  text-align: center;
+
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  /* outline: 1px solid crimson; */
+  padding-top: 200px;
+}
+.hero {
+  text-align: center;
+  background: #2f303a;
 }
 .btn {
+  margin-top: 30px;
+  margin-bottom: 200px;
   font-family: inherit;
   background-color: var(--accent-color);
   color: var(--white-text-color);
@@ -96,11 +154,15 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
-  display: flex;
   align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   cursor: pointer;
+  padding: 10px 32px;
+  display: inline-block;
+}
+
+.features-section-title {
+  padding-top: 94px;
 }
 
 .btn:hover,
@@ -108,8 +170,11 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .btn-filtr {
+  display: flex;
+  align-items: center;
   font-family: inherit;
-  background-color: var(--primary-background-color);
+  margin-right: 8px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 26px;
@@ -117,6 +182,9 @@
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  background: #f5f4fa;
+  border-radius: 4px;
+  padding: 6px 22px;
 }
 
 .btn-filtr:focus,
@@ -125,19 +193,211 @@
   color: var(--white-text-color);
 }
 
+/* ////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////// */
+
+/* Main Portfolio */
+
+.btn-container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.list-container {
+  padding-top: 94px;
+  padding-bottom: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.flex-container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 50px;
+}
+
+.flex-element {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.flex-element:nth-child(3n) {
+  margin-right: 0;
+}
+.flex-element:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.work-title {
+  margin-top: 20px;
+  margin-left: 24px;
+  margin-bottom: 0;
+  margin-right: 24px;
+  text-decoration: none;
+
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.work-description {
+  margin-top: 4px;
+  margin-left: 24px;
+  margin-right: 24px;
+
+  text-decoration: none;
+  color: var(--secondary-text-color);
+  font-size: 16px;
+  line-height: 1.9;
+}
+.title-section-part {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.main-contacts {
+  display: flex;
+  margin-left: auto;
+}
+
+.main-contacts .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.link-header {
+  margin-right: auto;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  text-decoration: none;
+  list-style: none;
+}
+
+.link.current {
+  color: #2196f3;
+}
+
+.work.title {
+  text-decoration: none;
+  line-height: 2;
+  color: var(--primary-text-color);
+}
+
+.list {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+  margin-left: 0;
+  margin-right: 30px;
+  padding-left: 0;
+}
+
+.list-team {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 0;
+  margin-right: 30px;
+  padding-left: 0;
+  margin-top: 50px;
+}
+.list-team:nth-child(4n) {
+  margin-right: 0;
+}
+.list-activity {
+  display: flex;
+  list-style: none;
+
+  margin-left: 0;
+  margin-right: 30px;
+  padding-left: 0;
+  margin-top: 50px;
+}
+
+.list:nth-child(4n) {
+  margin-right: 0;
+}
+.feature-description:nth-child(4n) {
+  margin-right: 0;
+}
+.list-picture {
+  width: 370px;
+  margin-right: 30px;
+}
+.list-picture:nth-child(3n) {
+  margin-right: 0;
+}
+
+.link a {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--primary-text-color);
+}
+.link a :visited {
+  color: var(--primary-text-color);
+}
+
+.site-nav a:hover,
+.site-nav a:focus {
+  color: var(--accent-color);
+}
+.link-header:hover,
+.link-header:focus {
+  color: var(--accent-color);
+}
+.feature-title {
+  line-height: 1.14;
+  text-transform: uppercase;
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
 .section-title {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.team-name {
+  margin-top: 30px;
+  margin-bottom: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+.job-title {
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+.feature-description {
+  color: var(--secondary-text-color);
+  margin-bottom: 0;
+  margin-top: 0;
+  width: 270px;
+  line-height: 1.7;
+}
+.logo-studio {
+  color: var(--primary-text-color);
+}
+
+.section-title {
+  margin-top: 0;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
 }
 
-.team-name {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-}
 .job-title {
   font-size: 16px;
   line-height: 1.19;
@@ -147,25 +407,29 @@
 .address-style {
   font-style: normal;
   line-height: 1.71;
+  padding-top: 20px;
   color: var(--white-text-color);
 }
-.list {
-  list-style: none;
-  text-decoration: none;
-  font-style: normal;
+
+.logo-studio-footer {
+  color: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 20px;
 }
 
-.link {
-  text-decoration: none;
+.list-footer a {
+  margin-top: 20px;
+  color: rgba(255, 255, 255, 0.6);
+  line-height: 1.7;
+  padding-top: 9px;
 }
-.list a {
-  text-decoration: none;
+
+.footer-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #2f303a;
 }
-.work.title {
-  text-decoration: none;
-  line-height: 2;
-  color: var(--primary-text-color);
-}
-h2 {
-  color: var(--primary-text-color);
+
+.features-section-title {
+  padding-bottom: 76px;
 }
