--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,12 @@ img {
   height: auto;
 }
 
-ul, h1, h2, h3, h4, p {
+ul,
+h1,
+h2,
+h3,
+h4,
+p {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -54,7 +59,6 @@ a {
   /* outline: 1px solid crimson; */
 }
 .container-header {
-
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -62,11 +66,8 @@ a {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  
 }
- /* outline: 1px solid blue;  */
-
-
+/* outline: 1px solid blue;  */
 
 /* Header////////////////////////////////////////////////////////////////////// */
 
@@ -76,7 +77,6 @@ a {
   align-items: center;
 }
 .logo {
-
   padding-top: 24px;
   padding-bottom: 24px;
 
@@ -122,7 +122,7 @@ a {
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
-  background: var(--hero-bachground-color)
+  background: var(--hero-bachground-color);
 }
 .btn {
   margin-top: 30px;
@@ -142,19 +142,19 @@ a {
   display: inline-block;
 }
 
-.section-general{
-/* padding-top: 94px; */
-  padding-bottom: 94px; 
+.section-general {
+  /* padding-top: 94px; */
+  padding-bottom: 94px;
 }
 
-.section-general-features{
-  padding-top: 94px; 
-    padding-bottom: 94px; 
-  }
-.section-general-team{
+.section-general-features {
   padding-top: 94px;
-  padding-bottom: 94px; 
-  background-color:var(--secondary-background-color);
+  padding-bottom: 94px;
+}
+.section-general-team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--secondary-background-color);
 }
 
 .btn:hover,
@@ -242,7 +242,6 @@ a {
   line-height: 1.9;
 }
 
-
 .main-contacts {
   display: flex;
   margin-left: auto;
@@ -265,10 +264,9 @@ a {
 .link.current {
   color: #2196f3;
 }
-.section-title{
+.section-title {
   margin-bottom: 50px;
 }
-
 
 .list {
   display: flex;
@@ -279,14 +277,13 @@ a {
   padding-left: 0;
 }
 
-.name-job{
+.name-job {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 .list-team {
   display: flex;
- gap: 30px;
-
+  gap: 30px;
 }
 .list-team:nth-child(4n) {
   margin-right: 0;
@@ -338,14 +335,12 @@ a {
 }
 
 .team-name {
-
   margin-bottom: 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
-
 
 .feature-description {
   color: var(--secondary-text-color);
@@ -385,12 +380,11 @@ a {
   padding-left: 15px;
   padding-right: 15px;
 
-
   /* outline: 1px solid crimson; */
 }
 .logo-footer {
   color: var(--accent-color);
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
@@ -400,15 +394,15 @@ a {
   color: var(--white-text-color);
 }
 .list-footer {
-  margin-top: 20px;}
+  margin-top: 20px;
+}
 
 .footer-address {
   display: block;
-  color: var(--white-text-color); 
+  color: var(--white-text-color);
   margin-bottom: 9px;
   gap: 9px;
 }
-
 
 .footer-email {
   display: block;
@@ -422,23 +416,24 @@ a {
   line-height: 1.7;
 }
 
-.list-card{
+.list-card {
   background-color: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
-.flex-element{
-  border: 1px solid #EEEEEE;
+.flex-element {
+  border: 1px solid #eeeeee;
 }
 
 .main-list {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.list-footer{
+.list-footer {
   gap: 9px;
 }
-.page-header{
-  border-bottom: #ECECEC 1px solid;
+.page-header {
+  border-bottom: #ececec 1px solid;
 }
